Implemented handler for Navigating event. Created SetToolbarEnabling method that determines whether the back and forward buttons can be used.

--- a/TraceIt/Views/StandardWebPage.xaml
+++ b/TraceIt/Views/StandardWebPage.xaml
@@ -17,7 +17,8 @@
     <ContentPage.Content>
         <StackLayout Style="{DynamicResource gradientStackLayout}">
             <WebView x:Name="webView" Source="{Binding Hyperlink}" VerticalOptions="FillAndExpand" 
-                     HorizontalOptions="FillAndExpand" Navigated="webView_Navigated"/>
+                     HorizontalOptions="FillAndExpand" Navigated="webView_Navigated"
+                     Navigating="webView_Navigating"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
