--- a/TraceIt/Views/GradeSelectionPage.xaml
+++ b/TraceIt/Views/GradeSelectionPage.xaml
@@ -11,7 +11,11 @@
 
     <ContentPage.ToolbarItems>
         <ToolbarItem x:Name="closeToolbarItem" Text="Done"
-                     Clicked="closeToolbarItem_Clicked"/>
+                     Clicked="closeToolbarItem_Clicked">
+            <ToolbarItem.IconImageSource>
+                <FontImageSource Size="Medium" FontFamily="PrimaryIcons" Glyph="{DynamicResource Tick}"/>
+            </ToolbarItem.IconImageSource>
+        </ToolbarItem>
     </ContentPage.ToolbarItems>
 
     <ContentPage.Resources>
