--- a/TraceIt/Views/StandardCategorisedDetailPage.xaml
+++ b/TraceIt/Views/StandardCategorisedDetailPage.xaml
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             xmlns:xforms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms" 
-             xmlns:buttons="clr-namespace:Syncfusion.XForms.Buttons;assembly=Syncfusion.Buttons.XForms"
+             xmlns:xforms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
              xmlns:viewmodels="clr-namespace:TraceIt.ViewModels"
              xmlns:triggers="clr-namespace:TraceIt.Triggers"
              x:Class="TraceIt.Views.StandardCategorisedDetailPage"
@@ -26,9 +25,9 @@
                 <xforms:SfListView.ItemTemplate>
                     <DataTemplate>
                         <Frame Style="{DynamicResource listItemFrame}">
-                            <Grid RowDefinitions="Auto, Auto, Auto" ColumnDefinitions="Auto, Auto">
+                            <Grid RowDefinitions="Auto, Auto, Auto" ColumnDefinitions="2*, 120">
                                 <Label Text="{Binding Code}" FontAttributes="Bold" Grid.Column="0" Grid.Row="0"/>
-                                <Label Text="{Binding Title}" Grid.Column="0" Grid.Row="1"/>
+                                <Label Text="{Binding Title}" FontAttributes="Italic" Grid.Column="0" Grid.Row="1"/>
                                 <Label Text="{Binding AddedTo, StringFormat='Added to: {0}'}"
                                        Grid.Column="0" Grid.Row="2"/>
 
@@ -36,7 +35,8 @@
                                         Grid.Column="1"
                                         Grid.RowSpan="2"
                                         Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:StandardCategorisedDetailPageViewModel}}, Path=ChangeStandardSelectionCommand}" 
-                                        CommandParameter="{Binding Source={x:Reference selectionButton}, Path=BindingContext}">
+                                        CommandParameter="{Binding Source={x:Reference selectionButton}, Path=BindingContext}"
+                                        VerticalOptions="FillAndExpand">
 
                                     <Button.Background>
                                         <LinearGradientBrush StartPoint="0.5, 0" EndPoint="0.5, 1">
