--- a/TraceIt/Views/StandardDetailPage.xaml
+++ b/TraceIt/Views/StandardDetailPage.xaml
@@ -18,6 +18,8 @@
                 <Setter Property="FontSize" Value="Large"/>
                 <Setter Property="BackgroundColor" Value="#000720"/>
                 <Setter Property="Padding" Value="8, 8"/>
+                <Setter Property="Margin" Value="10"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
@@ -32,25 +34,25 @@
                          VerticalOptions="FillAndExpand"
                          HorizontalOptions="FillAndExpand">
 
-                    <Label Text="{Binding Code, StringFormat='Code: {0}'}" FontAttributes="Bold"/>
+                    <Label Text="{Binding Code, StringFormat='Code: {0}'}"/>
 
-                    <Label Text="{Binding Title, StringFormat='Title: {0}'}" FontAttributes="Bold"/>
+                    <Label Text="{Binding Title, StringFormat='Title: {0}'}"/>
 
-                    <Label Text="{Binding Subject_Reference, StringFormat='Subject Reference: {0}'}" FontAttributes="Bold"/>
+                    <Label Text="{Binding Subject_Reference, StringFormat='Subject Reference: {0}'}"/>
 
-                    <Label Text="{Binding Credits, StringFormat='Credits: {0}'}" FontAttributes="Bold"/>
+                    <Label Text="{Binding Credits, StringFormat='Credits: {0}'}"/>
 
-                    <Label Text="{Binding Level, StringFormat='Level: {0}'}" FontAttributes="Bold"/>
+                    <Label Text="{Binding Level, StringFormat='Level: {0}'}"/>
 
-                    <Label Text="{Binding Standard_Type, StringFormat='Standard Type: {0}'}" FontAttributes="Bold"/>
+                    <Label Text="{Binding Standard_Type, StringFormat='Standard Type: {0}'}"/>
 
-                    <Label Text="{Binding Assessment_Type, StringFormat='Assessment Type: {0}'}" FontAttributes="Bold"/>
+                    <Label Text="{Binding Assessment_Type, StringFormat='Assessment Type: {0}'}"/>
 
-                    <Label Text="{Binding CurrentVersion, StringFormat='Version: {0}'}" FontAttributes="Bold"/>
+                    <Label Text="{Binding CurrentVersion, StringFormat='Version: {0}'}"/>
 
-                    <Label Text="{Binding Status, StringFormat='Status: {0}'}" FontAttributes="Bold"/>
+                    <Label Text="{Binding Status, StringFormat='Status: {0}'}"/>
 
-                    <Label Text="{Binding Expiry_Date, StringFormat='Expiry Date: {0}'}" FontAttributes="Bold"/>
+                    <Label Text="{Binding Expiry_Date, StringFormat='Expiry Date: {0}'}"/>
 
                     <Button Text="Load PDF" TextColor="White"
                         FontAttributes="Bold" BackgroundColor="#00002B"
